[package]
name = "snapsync"
version = "0.1.0"
edition = "2021"
authors = ["Farcaster Team"]
description = "A tool to download and restore RocksDB snapshots from S3/R2"
license = "MIT OR Apache-2.0"

[[bin]]
name = "snapsync"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for downloading
reqwest = { version = "0.12", features = ["stream", "json"] }

# Data integrity
md5 = "0.7"

# CLI and progress
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# Compression and archive
flate2 = "1.0"
tar = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Retry logic
tokio-retry2 = { version = "0.5", features = ["jitter", "tracing"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
futures-util = "0.3"
atty = "0.2"
