[package]
name = "snapsync"
version = "0.1.0"
edition = "2021"
authors = ["Farcaster Team"]
description = "A tool to download and restore RocksDB snapshots from S3/R2"
license = "GPL-3.0"
repository = "https://github.com/farcasterxyz/snapsync"
documentation = "https://docs.rs/snapsync"

[[bin]]
name = "snapsync"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for downloading
# Note: Use rustls instead of native-tls to avoid OpenSSL dependency
# This enables simple cross-compilation without system OpenSSL packages
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }

# Data integrity
md-5 = { version = "0.10", features = ["asm"] }

# CLI and progress
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# Compression and archive
flate2 = "1.0"
tar = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Retry logic
tokio-retry2 = { version = "0.5", features = ["jitter", "tracing"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
futures-util = "0.3"
atty = "0.2"
